News UAT/force-app/main/default/objects/BLND_DFDT_Project__c/fields/BLND_Schedule_Override__c.field-meta.xml
<CustomField>
    <fullName>BLND_Schedule_Override__c</fullName>
    <label>Schedule Override</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>