News UAT/force-app/main/default/objects/BLND_DFDT_Project__c/fields/BLND_Weight__c.field-meta.xml
<CustomField>
    <fullName>BLND_Weight__c</fullName>
    <label>Weight</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>